--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 	<body>
 		<div class="game-holder" id="gameHolder">
 			<div class="header">
-				<h1><span>the</span>Aviator</h1>
-				<h2>fly it to the end</h2>
+				<h1><span></span></h1>
+				<h2></h2>
 				<div class="score" id="score">
 					<div class="score__content" id="level">
 						<div class="score__label">level</div>
